# pykrtourapi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  krtourapi-api.md  pyproject.toml
debug_ui/: app.py
docs/: openapi-catalog.md  pydantic-models.md  repeated-mistakes.md  testing.md  troubleshooting.md  user-guide.md
pykrtourapi/: __init__.py  _convert.py  _http.py  cli.py  client.py  enums.py  exceptions.py  hub.py  models.py  services.py  types.py
scripts/: download_visitkorea_manuals.ps1  run_live_tests.ps1
src/visitkorea/: __init__.py  _auth.py  _convert.py  _http.py  _pagination.py  _provenance.py  _time.py  cli.py  client.py  display.py  enums.py  exceptions.py  hub.py  models.py  services.py  types.py
tests/: conftest.py  test_cli.py  test_client.py  test_convert.py  test_display.py  test_docs.py  test_enums.py  test_http.py  test_hub.py  test_live.py  test_packaging.py
