[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykrtourapi"
version = "0.1.0"
description = "Unofficial Python client for Korea Tourism Organization TourAPI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "digitie"}
]
keywords = ["tourapi", "korea", "tourism", "visitkorea", "data.go.kr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "pykrtour>=0.1.5",
  "requests>=2.31",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "responses>=0.25",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests>=2.31",
]

[project.scripts]
pykrtourapi = "pykrtourapi.cli:main"

[tool.setuptools.packages.find]
include = ["pykrtourapi*"]

[tool.setuptools.package-data]
pykrtourapi = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "live: tests that call the real TourAPI service and require KTO_SERVICE_KEY",
]
